# TestApp_llama.cpp

./: .gitignore  CMakeLists.txt  README.md  build_project.bat  main.cpp  vcpkg.json
Lib/: model_lib.hpp
models/: Readme.md
usingVCPKG/: CMakeLists.txt  build_project.bat  main.cpp
usingVCPKG/models/: Readme.md
